Fix native compilation issues